# kv-compact

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  HANDOVER-AMD-GPU.md  HANDOVER.md  README.md  bench_10k_50x.py  bench_10k_scaling.py  bench_250k_final.py  bench_250k_scaling.py  bench_agents_v2.py  bench_agents_v3.py  bench_aggressive.py  bench_coding_agents.py  bench_cpu_scaling.py  bench_longctx.py  bench_perslot_scaling.py  bench_server.py  bench_sweetspot.py  bisect_fork.sh  build.bat  gen-prompts.py  plan.md  prompt-10k.txt  prompt-profile.txt  run-compact-scaling.sh  run-niah.sh  run-parallel.sh  run-server-bench.sh  run-server-compact-bench.sh  run-test.ps1  test-optimization-standalone.bat
.claude/agents/: rocm-optimizer.md
.claude/skills/rocm/: SKILL.md
agents/: cuda-optimization-advisor.md  cuda-optimizer.md  rocm-specialist.md
docs/: ALGORITHM.md  action-plan-gpu-inference.md  adapter-state-machine.md  algorithms.md  arxiv-kv-compression-survey.md  attn-bias-flow.md  benchmark-results-scaling.md  compaction-optimization-research.md  cuda-build-attempts.md  cuda-discovery-winget.md  gherkin-test-coverage.md  gpu-inference-attempt-summary.md  gpu-setup-guide.md  hybrid-model-analysis.md  improvement-tracker.md  ls-solve-optimization-research.md  optimization-validation-results.md  plan-expert-caching.md  plan-moe-optimization-revised.md  plugin-architecture-plan.md  prioritization-frameworks.md  prioritization-update-2026-03-14.md  profiling-guide.md  profiling-results-analysis.md  rice-cod-scoring.md  rocm-features.md  serving-benchmarks-2026-03-14.md  session-2026-03-13.md  session-handover-2026-04-04.md  session-summary-2026-03-11.md  session-summary-profiling.md  skills-agents-update-needed.md  spec-decode-synergy.md  sprint1-item1-completed.md  strategic-analysis.md  sublinear-optimization-report.md  sublinear-optimization-summary.md  timeline.md  user-stories.md  vulkan-perf-profile-35b.md
examples/: profiling-demo.cpp
include/: kv-compact-accel.h  kv-compact-adapter.h  kv-compact-api.h  kv-compact-math.h  kv-compact-moe-cache.h  kv-compact-optimized.h  kv-compact-profiling.h  kv-compact-state.h
patches/: apply.sh  attn-bias.patch  server-kv-compact.patch
python/: MLX.md  pyproject.toml
python/examples/: mlx_example.py
python/kv_compact/: __init__.py  _bindings.py  _core.py  _numpy_impl.py  mlx.py
python/tests/: test_compact.py
reports/: bench-algorithm-phase3.txt  bench-quality-phase3.txt  bench-quant-throughput.txt  bench-quantized-b4.txt  bench-rkv-phase4.txt  test-api-phase3.txt  test-api-phase4-rkv.txt  test-math-phase3.txt
samples/: README.md
samples/BlazorComponents/: ChatMessage.razor  CompactionMonitor.razor  StreamingText.razor
samples/Python/: code_understanding_test.py
samples/Rust/src/: lib.rs  streaming.rs
samples/Services/: IKvCacheService.cs  KvCacheService.cs
samples/TypeScript/examples/: browser-example.html
samples/TypeScript/src/: code-understanding-test.ts  compaction.ts  index.ts
scripts/: README.md  benchmark-gemma3.bat  benchmark-phi35.bat  profile-bottleneck.sh  profile-instrumented.cpp  profile-simple.ps1  profile-windows.ps1  profile-wsl.sh  safe-llama-run.bat  safe-llama-run.sh
skills/: gpu-optimization.md  llama-gpu-integration.md  qwen35-optimization.md
src/: kv-compact-api.cpp  kv-compact-hip.hip  kv-compact.cpp
tests/: bench-bridge-selection.cpp  bench-expert-cache.cpp  bench-kv-compact-codegen.cpp  bench-kv-compact-model.cpp  bench-kv-compact-quality.cpp  bench-kv-compact.cpp  bench-nnls-impact.cpp  bench-opt-expected-attention.cpp  bench-opt-real-model.cpp  bench-opt-snapkv-window.cpp  bench-opt-value-norm-filter.cpp  bench-optimization.cpp  bench-quant-throughput.cpp  bench-synthetic.cpp  bench-throughput-large.cpp  moe-prompt.txt  moe_benchmark.json  test-budget-exchange.cpp  test-kv-compact-adapter.cpp  test-kv-compact-api.cpp  test-kv-compact-e2e.cpp  test-kv-compact-math.cpp  test-moe-cache.cpp  test-optimization-standalone.cpp  test_moe_analysis.py
tests/features/: optimization-features.feature
