[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-compact"
version = "0.1.0"
description = "Fast KV Cache Compaction via Attention Matching — Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.10",
    "mlx-lm>=0.10",
]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kv_compact*"]
